--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "aida64-reader-rs"
-description = "AIDA64 reader"
-authors = ["Yoaken"]
+description = "a data reader from AIDA64"
+authors = ["Yoake"]
+license = "MIT"
 homepage = "https://github.com/Yoaken/aida64-reader-rs"
 repository = "https://github.com/Yoaken/serde-xml-rs"
 version = "0.1.0"
@@ -14,3 +15,8 @@ winreg = "0.52"
 winapi = {version = "0.3.9",features = ["memoryapi","handleapi"]}
 serde = {version = "1", features = ["derive"]}
 serde-xml-rs ={ version = "0.6.0" }
+
+[features]
+default = ["shm"]
+shm = []
+reg = []
