--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,18 +5,24 @@ authors = ["Yoake"]
 license = "MIT"
 homepage = "https://github.com/Yoaken/aida64-reader-rs"
 repository = "https://github.com/Yoaken/serde-xml-rs"
-version = "0.1.1"
+version = "0.1.2"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[package.metadata.docs.rs]
+all-features = true
+default-target = "x86_64-pc-windows-msvc"
+
 
 [dependencies]
 winreg = {version = "0.52",optional = true}
 winapi = {version = "0.3.9",features = ["memoryapi","handleapi"],optional = true}
 serde = {version = "1", features = ["derive"]}
 serde-xml-rs ={ version = "0.6.0" ,optional = true}
+wmi = {version = "0.13", optional = true}
 
 [features]
 default = ["shm"]
 shm = ["winapi","serde-xml-rs"]
 reg = ["winreg"]
+wmis = ["wmi"]
