--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -7,7 +7,7 @@ jobs:
     name: Build
     runs-on: windows-2019
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Setup Rust toolchain
         uses: dtolnay/rust-toolchain@stable
@@ -20,9 +20,13 @@ jobs:
       - name: Build - No features
         run: cargo build --no-default-features
 
-      # Cargo build - Only time
+      # Cargo build - Only 
       - name: Build - Only time feature
-        run: cargo build --no-default-features --features=time
+        run: cargo build --no-default-features --features=reg
+
+      # Cargo build - Only 
+      - name: Build - Only time feature
+        run: cargo build --no-default-features --features=wmis
 
       # Cargo build - All features
       - name: Build - All features
@@ -32,7 +36,7 @@ jobs:
     name: Run tests
     runs-on: windows-2019
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Setup Rust toolchain
         uses: dtolnay/rust-toolchain@stable
@@ -41,19 +45,19 @@ jobs:
       - name: Test - All targets
         run: cargo test --all-targets
 
-      # Test time crate
+      # Test reg crate
       - name: Test - Only tests with the Time crate
-        run: cargo test --tests --no-default-features --features=time
+        run: cargo test --tests --no-default-features --features=reg
 
       # Test documentation with the 'test' feature
       - name: Test - Only Documentation
-        run: cargo test --doc --features=test
+        run: cargo test --tests --features=wmis
 
   fmt:
     name: Rustfmt
     runs-on: windows-2019
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Setup Rust toolchain
         uses: dtolnay/rust-toolchain@stable
@@ -67,7 +71,7 @@ jobs:
     name: Clippy
     runs-on: windows-2019
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Setup Rust toolchain
         uses: dtolnay/rust-toolchain@stable
