--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,9 +3,9 @@ name = "aida64-reader-rs"
 description = "a data reader from AIDA64"
 authors = ["Yoake"]
 license = "MIT"
-homepage = "https://github.com/Yoaken/aida64-reader-rs"
-repository = "https://github.com/Yoaken/serde-xml-rs"
-version = "0.1.32"
+homepage = "https://github.com/Yoak3n/aida64-reader-rs"
+repository = "https://github.com/Yoak3n/aida64-reader-rs"
+version = "0.1.33"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
